Finish Service Item Design

--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
-indent_size = 2
+indent_size = 3s
 
 [docker-compose.yml]
-indent_size = 4
+indent_size = 2
